--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@ language: php
 php:
  - nightly
 
+install:
+ - composer global require "squizlabs/php_codesniffer=*"
+
+before_script:
+ - phpcs --version
+
 script: 
  - phpunit --configuration tests/phpunit.xml 
  - phpcs --standard=PSR2 lib/*
